# AG-UI-AG2

./: README.md
ag-ui-travel-agent/: README.md  main.py  main_fastapi.py  pyproject.toml  requirements.txt  run_simple.py  test_config.py
ag-ui-travel-agent/src/ag_ui_ag2/: ag_ui_adapter.py  database.py  fastapi_ui.py  hitl_workflow.py  messages.py  tool_events.py  without_fastagency.py
ag-ui-travel-agent/src/ag_ui_ag2/.cache/41/: cache.db
ag-ui-travel-frontend/: package-lock.json  package.json
ag-ui-travel-frontend/src/app/: page.tsx
ag-ui-travel-frontend/src/app/about/: page.tsx
ag-ui-travel-frontend/src/app/api/copilotkit/: route.ts
ag-ui-travel-frontend/src/app/components/: Chat.tsx  Footer.tsx  Header.tsx  Travel.tsx
ag-ui-travel-frontend/src/app/copilotkit/: layout.tsx  page.tsx
ag-ui-travel-frontend/src/app/destinations/: page.tsx
ag-ui-travel-frontend/src/app/fastapi/: page.tsx
ag-ui-travel-frontend/src/app/privacy/: page.tsx
ag-ui-travel-frontend/src/app/terms/: page.tsx
ag-ui-travel-frontend/src/lib/: types.ts
