[project]
name = "ag-ui-ag2"
version = "0.1.0"
description = ""
authors = [
    {name = "John Smith",email = "qaplatformmoderator@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "ag-ui-protocol (>=0.1.4,<0.2.0)",
    "openai (>=1.78.1,<2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "ag2[openai] (>=0.9.1.post0,<0.10.0)",
    "fastagency (>=0.9.1.post0,<0.10.0)",
    "autogen (>=0.9.1.post0,<0.10.0)",
    "requests (>=2.31.0,<3.0.0)",
    "sseclient-py (>=1.7.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "ag_ui_ag2", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
